# msc-thesis

./: .gitignore  LICENSE  README.md  Untitled.ipynb  calculate_interpolation.py  get_events.py  join_files.py  pyproject.toml  standardise_data.py
data/analysis/: patterns_first_data_point.json  patterns_last_data_point.json
data/final/: angular.json  aspnetcore.json  gatsby.json  react.json  vue.json
data/interpolation/angular/: 2015-03-18.json  2015-06-18.json  2016-09-18.json  2016-12-18.json  2017-06-18.json  2017-12-18.json  2018-12-18.json  2019-03-18.json  2019-09-18.json  2019-12-18.json  2020-03-18.json  2020-09-18.json  2021-03-18.json
data/interpolation/aspnetcore/: 2014-06-11.json  2014-09-11.json  2014-12-11.json  2015-03-11.json  2015-06-11.json  2015-12-11.json  2016-03-11.json  2016-06-11.json  2016-09-11.json  2016-12-11.json  2017-03-11.json  2017-06-11.json  2017-09-11.json  2017-12-11.json  2018-03-11.json  2018-06-11.json  2018-09-11.json  2019-03-11.json  2019-09-11.json  2020-06-11.json  2020-09-11.json  2020-12-11.json  2021-04-30.json
data/interpolation/gatsby/: 2015-08-21.json  (+14 more)
data/misc/: adoption.json  limits.json
downloaded_data/step4/: react.json  vue.json
notebooks/: github_visualization.ipynb
notebooks/analysis/: conditional_probability.ipynb  correlation.ipynb  data_points.ipynb  patterns.ipynb
notebooks/helpers/: days_since_creation.ipynb  days_to_stars.ipynb  mid_data_point.ipynb
notebooks/metrics/: independent.ipynb  joint.ipynb
scripts/: calculate_interpolation.py  get_events.py  join_files.py  standardise_data.py
(+394 files in other folders)
