[tool.poetry]
name = "dissertation"
version = "0.1.0"
description = ""
authors = ["João Santos <joao.santos@pocket-lint.co.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.0"
requests = "^2.25.1"
scipy = "^1.6.0"
matplotlib = "^3.3.4"
jupyterlab = "^3.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
