[tool.poetry]
name = "dissertation"
version = "1.0.0"
description = ""
authors = ["João Santos <up201809187@fe.up.pt>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
jupyterlab = "^3.0.7"
numpy = "^1.20.1"
python-dateutil = "^2.8.1"
scipy = "^1.6.0"
matplotlib = "^3.3.4"
python-dotenv = "^0.15.0"
argparse = "^1.4.0"
pandas = "^1.2.4"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
